tests/feature_tests/error_large_literal.c
int main() {
  // error: integer literal too large to be represented by any integer type
  1000000000000000000000000000;
}
